--- a/accounts/templates/registration/signup.html
+++ b/accounts/templates/registration/signup.html
@@ -9,11 +9,11 @@
         </header>
         <main>
             <div>
-                <h1>Login<h1>
+                <h1>Signup</h1>
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button>Login</button>
+                    <button>Signup</button>
                 </form>
             </div>
         </main>
