--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -21,6 +21,7 @@
                         {% for project in project_list %}
                         <tr>
                             <td>{{ project.name }}</td>
+                            <td><a href="{% url 'show_project' project.pk %}">{{ project.name }}</a></td>
                             <td>{{ project.tasks.all|length }} </td>
                         </tr>
                         {% endfor %}
