--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -6,9 +6,11 @@
     <body>
         <header>
         </header>
+
         <main>
             <div>
                 <h1>My Projects</h1>
+                <p><a href="{% url 'create_project' %}">Create Project</a></p>
                 {% if project_list|length == 0 %}
                 <p>You are not assigned to any projects</p>
                 {% else %}
@@ -20,7 +22,6 @@
                     <tbody>
                         {% for project in project_list %}
                         <tr>
-                            <td>{{ project.name }}</td>
                             <td><a href="{% url 'show_project' project.pk %}">{{ project.name }}</a></td>
                             <td>{{ project.tasks.all|length }} </td>
                         </tr>
