--- a/tasks/templates/tasks/mine.html
+++ b/tasks/templates/tasks/mine.html
@@ -29,6 +29,12 @@
                             <td>{% if task.is_completed == True %}
                                 Done
                                 {% else %}
+                                <form method="post" action="{% url 'complete_task' task.id %}">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="is_completed" value="True">
+                                    <button>Complete</button>
+                                </form>
+
                                 {% endif %}
                             </td>
                         </tr>
