--- a/projects/templates/projects/detail.html
+++ b/projects/templates/projects/detail.html
@@ -1,3 +1,5 @@
+{% load markdownify %}
+
 <!DOCTYPE html>
 <html lang="eng">
     <head>
@@ -10,7 +12,7 @@
         <main>
             <div>
                 <h1>{{ project.name }}</h1>
-                <p> {{ project.description }}</p>
+                {{ project.description|markdownify }}
                 <h2>Tasks</h2>
                 <p><a href="{% url 'create_task' %}">Create a new task</a></p>
                 {% if project.tasks.all %}
