Fixed formatting errors that occur after running python manage.py tests

--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -28,13 +28,10 @@
                     {% endif %}
                 </ul>
             </nav>
-
         </header>
-
-        </nav>
         <main>
             <div>
-                <h1>Login<h1>
+                <h1>Login</h1>
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
